[project]
name = "meshtastic-mapper"
version = "0.1.0"
description = "A lightweight web app to visualize Meshtastic range test results"
authors = [
    {name = "Six"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
